# shirasu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
shirasu/: __init__.py  client.py  config.py  context.py  di.py  event.py  logger.py  message.py
shirasu/addon/: __init__.py  addon.py  builtin.py  exceptions.py  pool.py  rule.py
shirasu/addons/: echo.py  help.py  manage.py  reject_tome.py  square.py
shirasu/client/: __init__.py  client.py  mock.py  onebot.py
shirasu/internal/: __init__.py  future_table.py  retry.py
shirasu/util/: __init__.py  asyncify.py  future_table.py  retry.py  singleton.py
test/: test_addon.py  test_di.py  test_echo.py  test_lifecycle.py  test_parse_message.py
